Java and Gradle version bump plus cleanup